fix: textarea font color white and size bigger, buttons now should display correct font colors as well and posts texts shouldn't overflow its container when a string is too big

--- a/Front-End/src/components/PostForm/PostForm.css
+++ b/Front-End/src/components/PostForm/PostForm.css
@@ -5,16 +5,19 @@ textarea{
   min-height: 80px;
   max-height: 150px;
   height: fit-content;
+  color: white;
   background-color: #3b3b3b;
+  font-size: 1.2rem;
 }
 #submit-button {
   cursor: pointer;
+  color: white;
   background-color: #1db954;
   border: none;
   border-radius: 2px;
   padding: 5px;
+  font-size: 1rem;
   font-weight: 600;
-  text-shadow: 0 1px 1px black;
   font-family: monospace;
 }
 #comment-section-form {
